# niftywall

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  PULL_REQUEST_TEMPLATE.md  README.md  README_ENG.md  SECURITY.md  docker-compose.yml.example  niftywall.service  pyproject.toml  requirements.txt  robots.txt  sitemap.xml  update_docker_hub.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docker-release.yml  release.yml
app/: auth.py  backup_router.py  db.py  fail2ban_parser.py  main.py  nft_handler.py  panic_router.py  rules_router.py  settings_router.py  system_router.py
data/: niftywall.db  uptime_history.json  users.json
snapshots/: 20260313_075639_add_to_set_banned4.nft  20260313_080138_update_threat_intel.nft  20260313_083157_remove_from_set_banned4.nft  20260313_083240_add_to_set_ssh_allow4.nft  20260313_083300_add_to_set_ssh_allow4.nft  20260313_083348_add_to_set_ssh_allow4.nft  20260313_083500_add_to_set_ssh_allow4.nft  20260313_083518_add_to_set_ssh_allow4.nft  20260313_090300_add_to_set_ssh_allow4.nft  20260313_090359_add_to_set_ssh_allow4.nft  20260313_090406_add_to_set_ssh_allow4.nft  20260313_090508_add_to_set_banned4.nft  20260313_113534_add_advanced_rule_tcp_5555.nft  20260313_113601_add_advanced_rule_tcp_5555.nft  20260313_113913_add_nat_rule.nft  20260313_113950_delete_rule_64.nft  20260416_051018_pre_deploy_3_1_1.nft
templates/: index.html  login.html  onboarding.html
tests/: test_fail2ban_parser.py
