[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "niftywall"
version = "3.4.0"
description = "Professional web dashboard for managing nftables firewall"
readme = "README.md"
license = {text = "GPLv3"}
requires-python = ">=3.10"
authors = [{name = "Weby Homelab"}]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.31",
    "PyJWT>=2.13.0",
    "bcrypt>=4.3.0",
    "python-dotenv>=1.2.2",
    "psutil>=7.0.0",
    "requests>=2.34.0",
    "gunicorn>=23.0.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4.0",
    "mypy>=1.0",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["templates/*.html", "static/**/*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.mypy]
ignore_missing_imports = true
warn_return_any = true
